# django-kamal-aws-gha-example

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
deploy/config/: deploy.yml
src/: entrypoint.sh  gunicorn.conf.py
src/accounts/: admin.py  forms.py
src/accounts/migrations/: 0001_initial.py
src/accounts/tests/: test_accounts.py
src/config/: settings.py  urls.py
src/static/output/: style.css
src/templates/: base.html
src/webapp/: apps.py  urls.py  views.py
