[tool.poetry]
name = "webapp"
version = "0.1.0"
description = ""
authors = ["Dylan Castillo <dylan@iwanalabs.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
python-dotenv = "^1.0.0"
django-environ = "^0.10.0"
whitenoise = "^6.5.0"
gunicorn = "^21.2.0"
redis = "^5.0.1"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-django = "^4.5.2"
hiredis = "^2.2.3"
requests = "^2.31.0"
django-htmx = "^1.17.2"
django-debug-toolbar = "^4.1.0"
django-components = "^0.90"
django-allauth = "^64.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.4.1"
ruff = "^0.0.282"
notebook = "^7.0.2"
types-requests = "^2.31.0.3"
djlint = "^1.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.ruff]
ignore = ["E501"]

